--- a/config/locales/jpn/models.yml
+++ b/config/locales/jpn/models.yml
@@ -44,6 +44,8 @@ jpn:
         # amount: "Montant"
       document:
         # filename: "Fichier"
+      document_template:
+        # managed: "Géré par le système"
       entity:
         # active: "Active"
         # origin: "Lieu de la première rencontre"
@@ -328,6 +330,7 @@ jpn:
       # account: "Compte"
       # account_balance: "Balance de compte"
       # activity: "Activité"
+      # activity_repartition: "Répartition analytique"
       # affair: "Affaire"
       # animal: "Animal"
       # animal_group: "Groupe d'animaux"
@@ -337,13 +340,14 @@ jpn:
       # bank_statement: "Relevé de compte bancaire"
       # bioproduct: "Produit vivant"
       # building: "Lieu de stockage"
+      # building_room: "Pièce"
       # campaign: "Campagne"
       # cash: "Trésorerie"
       # cash_transfer: "Virement interne"
       company: "会社"
       # custom_field: "Champ complémentaire"
       # custom_field_choice: "Choix de champ complémentaire"
-      # delay: ""
+      # delay: "Délais"
       # department: "Service"
       # deposit: "Remise en banque"
       # deposit_item: "Ligne de remise en banque"
@@ -361,6 +365,7 @@ jpn:
       # event_nature: "Type d’évènement"
       # financial_year: "Exercice"
       # fungus: "Champignon"
+      # immatter: "Immatériel"
       # incoming_delivery: "Arrivage"
       # incoming_delivery_item: "Ligne d’arrivage"
       # incoming_delivery_mode: "Mode d’arrivage"
@@ -383,16 +388,24 @@ jpn:
       # mandate: "Responsabilité"
       # matter: "Matière"
       # observation: "Observation"
-      # operation: "Travail"
+      # operation: "Opération"
+      # operation_nature: "Type d'opération"
+      # operation_task: "Tâche"
       # outgoing_delivery: "Livraison"
       # outgoing_delivery_item: "Ligne de livraison"
       # outgoing_delivery_mode: "Mode de livraison"
       # outgoing_payment: "Décaissement"
       # outgoing_payment_mode: "Mode de décaissement"
+      # place: "Lieu"
       # plant: "Plante"
       # preference: "Préférence"
+      # primary_zone: "Zone primaire"
+      # procedure: "Procédure"
+      # procedure_nature: "Type de procédure"
       # product: "Produits"
+      # product_ability: "Compétence"
       # product_group: "Groupe de produit"
+      # product_indicator: "Indicateur"
       # product_localization: "Passage d'un produit en un lieu"
       # product_membership: "Passage d'un produit dans un groupe"
       # product_move: "Mouvement de stock"
@@ -416,6 +429,9 @@ jpn:
       # sale_item: "Ligne de vente"
       # sale_nature: "Type de vente"
       # sequence: "Séquence"
+      # service: "Service"
+      # settlement: "Installation"
+      # sub_zone: "Sous-zone"
       # subscription: "Abonnement"
       # subscription_nature: "Type d’abonnement"
       # tax: "Taxe"
@@ -425,6 +441,7 @@ jpn:
       # transport: "Transport"
       # unit: "Unité"
       # user: "Utilisateur"
+      # zone: "Zone"
   attributes:
     # account: "Compte comptable"
     # account_balances: "Balances de compte"
@@ -443,6 +460,7 @@ jpn:
     # affair: "Affaire"
     # affairs: "Affaires"
     # age: "Âge"
+    # alive: "En vie"
     # allocation_account: "Compte de dotation"
     # amount: "Montant"
     # animal_drugs: "Médicaments"
@@ -470,6 +488,7 @@ jpn:
     # attribute_name: "Nom de l’attribut"
     # authorized_payments_count: "Nombre d’encaissements autorisés"
     # auto_updateable_addresses: "Adresses mises à jour automatiquement"
+    # automatic: "Automatique"
     # available_prices: "Prix disponibles"
     # available_products: "Produits disponibles"
     # available_stocks: "Stocks disponibles"
@@ -495,6 +514,7 @@ jpn:
     # buildings: "Lieux de stockage"
     # by_default: "Par défaut"
     # cache: "Cache"
+    # campaign: "Campagne"
     # canal: "Canal"
     # cash: "Trésorerie"
     # cash_journals: "Journaux de caisse"
@@ -507,10 +527,10 @@ jpn:
     # ceded: "Cédé"
     # ceded_on: "Cédé le"
     # changes_reflected: "Refléter les changements"
-    # charges_account: "Compte de charge"
+    # charge_account: "Compte de charge"
+    # charges_account: "Comptes de charge"
     # charges_accounts: "Comptes de charge"
     # check_state: "Vérifier l’état"
-    # chidren: "Chidren"
     # child_kinships: "Relation enfant"
     # child_land_parcel: "Sous-îlot"
     # children: "Enfants"
@@ -536,6 +556,7 @@ jpn:
     # collected_amount: "TVA brute"
     # collected_taxes: "TVA collectées"
     # color: "Couleur"
+    # column_name: "Nom de colone"
     # columns: "Colonnes"
     comment: "メモ"
     # commercial: "Activité commerciale"
@@ -556,6 +577,8 @@ jpn:
     # confirmed_on: "Confirmée le"
     # connected_at: "Connecté le"
     # consumption: "Consommation (litres/heure)"
+    # container: "Contenant"
+    # content: "Contenu"
     # content_maximal_quantity: "Content maximal quantity"
     # content_nature: "Content nature"
     # conveyors: "Convoyeurs"
@@ -623,6 +646,7 @@ jpn:
     # depositables_incoming_payment_modes: "Modes de paiement avec remises en banque"
     # depositables_journal: "Journal des remises en banque"
     # deposits: "Remises en banque"
+    # depreciable: "Amortissable"
     # depreciable_amount: "Montant amortissable"
     # depreciated_amount: "Montant amorti"
     # depreciation: "Amortissement"
@@ -660,6 +684,7 @@ jpn:
     # employed: "Employé par la société"
     # employees: "employés"
     # employment: "Emploi/Rôle"
+    # encrypted_password: "Mot de passe crypté"
     # end_on: "Fin le"
     # entered_at: "Arrivé at"
     # entities: "Personnes"
@@ -785,6 +810,8 @@ jpn:
     # last_month: "Dernier mois"
     # last_name: "Nom de famille"
     # last_number: "Dernier numéro"
+    # last_sign_in_at: "Dernière connexion à"
+    # last_sign_in_ip: "Dernière IP de connexion"
     # last_year: "Dernière année"
     # left_on: "Parti le"
     # letter: "Lettre"
@@ -802,6 +829,7 @@ jpn:
     # location: "Location"
     lock_version: "修正の番号"
     # locked: "Verrouillé"
+    # locked_at: "Verrouillé à"
     # log: "Journal d'évènements"
     # loggable: "Peut se connecter"
     # lost: "En perte"
@@ -821,6 +849,7 @@ jpn:
     # mail_line_6: "Code postal ET ville"
     # mails: "Emails"
     # major_accounts: "Classes comptables"
+    # managed: "Géré par le système"
     # managed_events: "Évènements gérés"
     # managed_sales: "Ventes gérées"
     # managed_sales_invoices: "Factures gérées"
@@ -834,8 +863,9 @@ jpn:
     # measure_unit: "Unité de mesure"
     # measure_value: "Valeur de la mesure"
     # measured_at: "Mesuré à"
-    # members: "Members"
-    # memberships: "Memberships"
+    # member: "Membre"
+    # members: "Membres"
+    # memberships: "Membres du groupe"
     # min_duration: "Minute(s)"
     # minimal_length: "Longueur minimale"
     # minimal_quantity: "Minimal quantity"
