--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -190,9 +190,8 @@ jpn:
       # index: "Exercices comptables"
       # new: "Créer un nouvel exercice"
       # show: "Exercice comptable %{code}"
-    backend/help:
-      # index: "Aide"
-      # show: "Aide: %{title}"
+    backend/help: #?
+    backend/helps: #?
     backend/incoming_deliveries:
       # confirm: "Confirmer l’arrivée de la livraison"
       # edit: "Modifier l’arrivage: %{number}"
@@ -552,7 +551,6 @@ jpn:
     # backend/event_natures: "Types d’évènements"
     # backend/events: "Évènements"
     # backend/financial_years: "Exercices comptables"
-    # backend/help: "Aide"
     # backend/incoming_deliveries: "Livraisons entrantes"
     # backend/incoming_delivery_items: "Lignes de livraison entrante"
     # backend/incoming_delivery_modes: "Modes de réception d’arrivage"
