--- a/config/locales/arb/action.yml
+++ b/config/locales/arb/action.yml
@@ -855,6 +855,7 @@ arb:
     animal_group_tabbox:
       # animals: "Animaux du lot"
       # cares: "Soins réalisés sur le lot"
+    # animal_identification: "Identification animale"
     # animal_pie: "Animaux par lot"
     animal_tabbox:
       # cares: "Soins"
