--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -698,6 +698,7 @@ jpn:
     animal_group_tabbox:
       # animals: "Animaux du lot"
       # cares: "Soins réalisés sur le lot"
+    # animal_identification: "Identification animale"
     # animal_pie: "Animaux par lot"
     animal_tabbox:
       # cares: "Soins"
